--- a/fetch data.ipynb
+++ b/fetch data.ipynb
@@ -10,21 +10,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 163,
    "id": "49c3f3f4-f9a8-47e5-a5b5-c333d3212262",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "65bcdac2-3fde-4b8b-b632-b939d92c11b4",
+   "execution_count": 164,
+   "id": "44fc12c3-38a5-45df-a8fa-57e4f8348eb1",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "jonny_url = 'https://www.rottentomatoes.com/celebrity/oprah_noodlemantra'\n",
+    "amber_url = 'https://www.rottentomatoes.com/celebrity/amber_heard'\n",
+    "mojo_base_url = 'https://www.boxofficemojo.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "62dfb6b8-ab5d-4e9f-86e0-a67a0a1c018d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_box_office_mojo(title):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    # generate url to the movie statistics\n",
+    "    box_office_mojo_url = f'{mojo_base_url}search/?q={title}'\n",
+    "\n",
+    "    try:\n",
+    "        result = requests.get(box_office_mojo_url.replace('//','/').replace(':/','://')).content\n",
+    "        time.sleep(20)\n",
+    "    except:\n",
+    "        return {'Domestic': '$0', 'International': '$0', 'Worldwide': '$0'}\n",
+    "    \n",
+    "    soup = BeautifulSoup(result)\n",
+    "    all_movies = soup.find_all(\"div\", {\"class\": \"a-fixed-left-grid-inner\"})\n",
+    "\n",
+    "    try:\n",
+    "        first_option = all_movies[0].find(\"div\", {\"class\": \"a-fixed-left-grid-col\"})\n",
+    "    except:\n",
+    "        return {'Domestic': '$0', 'International': '$0', 'Worldwide': '$0'}\n",
+    "    \n",
+    "    link_to_movie = first_option.find(\"a\")[\"href\"]\n",
+    "    movie_url = mojo_base_url+link_to_movie\n",
+    "    \n",
+    "    # fetch movie statistics\n",
+    "    try:\n",
+    "        soup = BeautifulSoup(requests.get(movie_url.replace('//','/').replace(':/','://')).content)\n",
+    "        time.sleep(20)\n",
+    "    except:\n",
+    "        return {'Domestic': '$0', 'International': '$0', 'Worldwide': '$0'}\n",
+    "    \n",
+    "    \n",
+    "    performance_summaries = soup.find(\"div\", {\"class\": \"mojo-performance-summary-table\"}).find_all(\"div\", {\"class\": \"a-section\"})\n",
+    "    performance = {}\n",
+    "    for summary in performance_summaries:\n",
+    "        perfomance_type = summary.find(\"span\", {\"class\": \"a-size-small\"}).get_text().replace('\\n','').replace(' ','').split('(')[0]\n",
+    "        try:\n",
+    "            money = summary.find(\"span\", {\"class\": \"money\"}).get_text()\n",
+    "        except:\n",
+    "            money = '$0'\n",
+    "        performance[perfomance_type] = money\n",
+    "    return performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "65bcdac2-3fde-4b8b-b632-b939d92c11b4",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_and_transform(url):\n",
@@ -38,7 +104,8 @@
     "    Result df:\n",
     "        pandas dataframe containing data about movies related to the actor\n",
     "    \"\"\"\n",
-    "    result = requests.get(url).content\n",
+    "    result = requests.get(url.replace('//','/').replace(':/','://')).content\n",
+    "    time.sleep(20)\n",
     "    soup = BeautifulSoup(result)\n",
     "    tables = soup.find_all('table')\n",
     "    \n",
@@ -59,244 +126,42 @@
     "    \n",
     "    # some data cleaning\n",
     "    df['year'] = df['year'].apply(lambda x: str(x).replace('[','').replace(']','').split('-')[0])\n",
+    "    df = df[df['tomatometer']!=0]\n",
+    "    df = df[df['tomatometer']!='0']\n",
+    "    \n",
+    "    #get box office mojo data\n",
+    "    df['performance'] = df['title'].apply(fetch_box_office_mojo)\n",
+    "    expanded_df = df['performance'].apply(pd.Series)\n",
+    "    df = pd.concat([df.drop(['performance'], axis=1), df['performance'].apply(pd.Series)], axis=1)\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 167,
+   "id": "3f0c1bba-fd98-4c93-8adc-62eff1243333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jonny_df = get_and_transform(jonny_url)\n",
+    "jonny_df.to_csv('jonny.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
    "id": "36114a8f-1315-459d-bb30-311a10e6aad8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "jonny_df = get_and_transform('https://www.rottentomatoes.com/celebrity/oprah_noodlemantra')\n",
-    "amber_df = get_and_transform('https://www.rottentomatoes.com/celebrity/amber_heard')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "4a0139e8-0a42-4914-9d73-5cd49243f98b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>audiencescore</th>\n",
-       "      <th>boxoffice</th>\n",
-       "      <th>title</th>\n",
-       "      <th>tomatometer</th>\n",
-       "      <th>year</th>\n",
-       "      <th>type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>90</td>\n",
-       "      <td></td>\n",
-       "      <td>Minamata</td>\n",
-       "      <td>78</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>94</td>\n",
-       "      <td>2202</td>\n",
-       "      <td>Crock of Gold: A Few Rounds With Shane MacGowan</td>\n",
-       "      <td>96</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>63</td>\n",
-       "      <td></td>\n",
-       "      <td>Waiting for the Barbarians</td>\n",
-       "      <td>53</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31</td>\n",
-       "      <td></td>\n",
-       "      <td>London Fields, The Director's Cut</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>80</td>\n",
-       "      <td>565661</td>\n",
-       "      <td>City of Lies</td>\n",
-       "      <td>51</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  audiencescore boxoffice                                            title  \\\n",
-       "0            90                                                   Minamata   \n",
-       "1            94      2202  Crock of Gold: A Few Rounds With Shane MacGowan   \n",
-       "2            63                                 Waiting for the Barbarians   \n",
-       "3            31                          London Fields, The Director's Cut   \n",
-       "4            80    565661                                     City of Lies   \n",
-       "\n",
-       "  tomatometer  year   type  \n",
-       "0          78  2020  movie  \n",
-       "1          96  2020  movie  \n",
-       "2          53  2019  movie  \n",
-       "3           0  2019  movie  \n",
-       "4          51  2018  movie  "
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jonny_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "cc640025-58c5-4b50-a10b-0241859e7e69",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>audiencescore</th>\n",
-       "      <th>boxoffice</th>\n",
-       "      <th>title</th>\n",
-       "      <th>tomatometer</th>\n",
-       "      <th>year</th>\n",
-       "      <th>type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td></td>\n",
-       "      <td>Aquaman and the Lost Kingdom</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>80</td>\n",
-       "      <td></td>\n",
-       "      <td>Gully</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>31</td>\n",
-       "      <td></td>\n",
-       "      <td>London Fields, The Director's Cut</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>44</td>\n",
-       "      <td>257686</td>\n",
-       "      <td>Her Smell</td>\n",
-       "      <td>84</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>73</td>\n",
-       "      <td>335012133</td>\n",
-       "      <td>Aquaman</td>\n",
-       "      <td>65</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>movie</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  audiencescore  boxoffice                              title tomatometer  \\\n",
-       "0             0                  Aquaman and the Lost Kingdom           0   \n",
-       "1            80                                         Gully          26   \n",
-       "2            31             London Fields, The Director's Cut           0   \n",
-       "3            44     257686                          Her Smell          84   \n",
-       "4            73  335012133                            Aquaman          65   \n",
-       "\n",
-       "   year   type  \n",
-       "0  2023  movie  \n",
-       "1  2019  movie  \n",
-       "2  2019  movie  \n",
-       "3  2018  movie  \n",
-       "4  2018  movie  "
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "amber_df.head()"
+    "amber_df = get_and_transform(amber_url)\n",
+    "amber_df.to_csv('amber.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afeba730-41e1-47ad-8e24-04c600a64738",
+   "id": "4927945b-01dd-4f80-be62-adfdbbcb1e70",
    "metadata": {},
    "outputs": [],
    "source": []
